--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,4 +4,6 @@
         android:title="Домой"/>
     <item android:id="@+id/info"
         android:title="О программе"/>
+    <item android:id="@+id/smenaTemu"
+        android:title="Смена темы"/>
 </menu>
