--- a/app/src/main/res/layout/fragment_mother_board.xml
+++ b/app/src/main/res/layout/fragment_mother_board.xml
@@ -15,21 +15,31 @@
             android:id="@+id/text_mother"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/motherBoadr"
+            android:text="@string/mat_plat"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
 
         <Button
             android:id="@+id/button_pokupka"
             android:layout_width="200dp"
             android:layout_height="89dp"
-            android:layout_marginTop="15dp"
             android:background="@drawable/buttonradius"
             android:stateListAnimator="@null"
-            android:text="Материнская плата"
+            android:text="перейти к покупке"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_moth" />
+
+        <TextView
+            android:id="@+id/text_moth"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/motherBoadr"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_mother" />
     </androidx.constraintlayout.widget.ConstraintLayout>
