--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -25,7 +25,7 @@
             android:stateListAnimator="@null"/>
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/button_proc"
             android:layout_width="200dp"
             android:layout_height="89dp"
             android:layout_marginTop="64dp"
@@ -38,7 +38,7 @@
             android:stateListAnimator="@null"/>
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/hard_btn"
             android:layout_width="200dp"
             android:layout_height="89dp"
             android:layout_marginTop="56dp"
@@ -47,11 +47,11 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.235"
             app:layout_constraintStart_toEndOf="@+id/imageView3"
-            app:layout_constraintTop_toBottomOf="@+id/button2"
+            app:layout_constraintTop_toBottomOf="@+id/button_proc"
             android:stateListAnimator="@null"/>
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/memory_btn"
             android:layout_width="200dp"
             android:layout_height="89dp"
             android:layout_marginTop="48dp"
@@ -60,11 +60,11 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/imageView4"
-            app:layout_constraintTop_toBottomOf="@+id/button3"
+            app:layout_constraintTop_toBottomOf="@+id/hard_btn"
             android:stateListAnimator="@null"/>
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/videocard_btn"
             android:layout_width="200dp"
             android:layout_height="89dp"
             android:layout_marginTop="56dp"
@@ -73,11 +73,11 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/imageView5"
-            app:layout_constraintTop_toBottomOf="@+id/button4"
+            app:layout_constraintTop_toBottomOf="@+id/memory_btn"
             android:stateListAnimator="@null"/>
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/case_btn"
             android:layout_width="200dp"
             android:layout_height="89dp"
             android:layout_marginTop="72dp"
@@ -86,7 +86,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/imageView6"
-            app:layout_constraintTop_toBottomOf="@+id/button5"
+            app:layout_constraintTop_toBottomOf="@+id/videocard_btn"
             android:stateListAnimator="@null"/>
 
         <ImageView
