--- a/app/src/main/res/layout/fragment_mother_board.xml
+++ b/app/src/main/res/layout/fragment_mother_board.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/mat_plat"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -30,17 +31,21 @@
             android:text="перейти к покупке"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_moth" />
+            app:layout_constraintTop_toBottomOf="@+id/multiAutoCompleteTextView"
+            app:layout_constraintVertical_bias="0.878" />
 
         <TextView
-            android:id="@+id/text_moth"
-            android:layout_width="wrap_content"
+            android:id="@+id/multiAutoCompleteTextView"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/motherBoadr"
+            android:textIsSelectable="false"
+            android:editable="false"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_mother" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
