--- a/app/src/main/res/menu/my_navigation_items.xml
+++ b/app/src/main/res/menu/my_navigation_items.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/action_search"
-        android:title="темы"
+        android:title="Категории"
         android:icon = "@drawable/theme_icon"
          />
     <item android:id="@+id/action_settings"
-        android:title="типы"
+        android:title="корзина"
+        android:icon="@drawable/korzina"
          />
     <item android:id="@+id/action_navigation"
         android:title="настройки"
