--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Personal_computer_night" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Personal_computer" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#424269</item>
         <item name="colorPrimaryVariant">#424269</item>
